--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -1,5 +1,7 @@
 {% load static %}
 {% comment %} <link rel="stylesheet" href="{% static 'css/style.css' %}">
+<link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon" />
+
 <script src="{% static 'js/theme.js' %}"></script>
 
 <a href="{% url 'login' %}">Login</a> {% endcomment %}
