--- a/login/templates/login/ecommerce.html
+++ b/login/templates/login/ecommerce.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Chandran Electronics</title>
+    <title>Chandran online shop</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="{% static 'js/theme.js' %}"></script>
