--- a/login/templates/login/ecommerce.html
+++ b/login/templates/login/ecommerce.html
@@ -54,7 +54,7 @@
 
     <!-- Website Title -->
     <div class="site-title">
-        <h1>Chandran Electronics</h1>
+        <h1>Chandran online shop</h1>
     </div>
 
     <!-- Navbar -->
