--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
   <meta charset="UTF-8" />
-  <title>Chandran Electronics Login</title>
+  <title>Chandran  Login</title>
  
 </head>
 <body>
